# spindle-ai

./: .gitignore  Makefile  pyproject.toml
docs/: design.md
spindle/: __init__.py  agent.py  event.py  router.py  runner.py  session.py  tool.py  types.py
spindle/llm/: __init__.py  base.py  gemini.py
spindle/stores/: __init__.py  base.py  memory.py
tests/: test_event.py  test_gemini_e2e.py  test_llm.py  test_router.py  test_runner.py  test_session.py  test_tool.py
